--- a/nanobrowse/templates/block_viewer.html
+++ b/nanobrowse/templates/block_viewer.html
@@ -10,79 +10,89 @@
 </head>
 <body class="bg-gray-100">
     <div class="flex flex-col items-center mx-4 my-6">
-        
-        <!-- Sender Address -->
-        <div class="text-center mb-2">            
-            <span class="bg-blue-500 text-white text-sm px-2 py-1 rounded"><a href="{{ request.url_root }}/account/{{ block_data.sender_account }}">{{ block_data.sender_account }}</a></span>   
-            <p class="text-2xl font-bold text-center">Sender</p>            
-        </div>
-        
-        <!-- Sender Circle -->
-        <div class="w-12 h-12 border-2 border-blue-500 rounded-full"></div>
 
-        <!-- Arrow -->
-        <div class="flex flex-col items-center">
-            <div class="bg-blue-500 h-6 w-1"></div>                 
-        </div>
-       
-         <!-- Send Block -->
-        <div class="border-2 border-blue-500 bg-blue-100 w-128 rounded p-2 text-blue-500 mb-20 relative">
-            <span class="text-xs"><a href="{{ request.url_root }}/block/{{ block_data.send_block.hash }}">{{ block_data.send_block.hash }}</a></span>            
-            
-            <p class="text-2xl font-bold text-center mb-6">{{ block_data.send_block.amount }} Ӿ</p>
-            <span class="absolute bottom-2 left-2 bg-blue-500 text-white text-xs px-2 py-1 rounded">{{ 'Confirmed' if block_data.send_block.is_confirmed else 'Unconfirmed' }}</span>
-            <span class="absolute bottom-2 left-20 text-gray-500 text-xs px-2 py-1">{{ block_data.send_block.time_ago }}</span>
-            <span class="absolute bottom-2 right-2 bg-blue-500 text-white text-xs px-2 py-1 rounded">send block</span>
-        </div>
+        {% if block_data.is_change %}
 
-        <!-- Duration between Send & Receive
-        <div class="flex flex-col items-center mb-2">  
-            <i class="fa-solid fa-ellipsis-vertical"></i>        
-            <div class="text-black leading-none"><i class="fa-regular fa-clock"> </i> {{ block_data.duration_formatted }}</div>
-            <i class="fa-solid fa-ellipsis-vertical"></i>             
-        </div>
-        -->
-        
-        <!-- Receive Block -->
-        {% if block_data.receive_block.hash == '0' * 64 %}
-            <!-- No Receive Block -->
-            <div class="border-2 border-gray-400 bg-gray-200 w-128 rounded p-2 text-gray-500 relative">
-                <span class="text-xs">{{ '0' * 64 }}</span>
-                <p class="text-2xl font-bold text-center mb-6">Waiting for receiver</p>
-                <span class="absolute bottom-2 left-2 bg-gray-400 text-white text-xs px-2 py-1 rounded">Unconfirmed</span>
-                <span class="absolute bottom-2 right-2 bg-gray-400 text-white text-xs px-2 py-1 rounded">receive block</span>            
-            </div>
-
-            <!-- Receiver Circle gray -->
-            <div class="flex flex-col items-center">               
-                <div class="bg-gray-500 h-6 w-1"></div>
-                <div class="w-12 h-12 border-2 border-gray-500 rounded-full mb-2"></div>                
-            </div>
+            Change blocks are not yet supported...<br>
+            {{ block_data.change_block }}
 
         {% else %}
-            <!-- Receive Block -->
-            <div class="border-2 border-green-500 bg-green-100 w-128 rounded p-2 text-green-500 relative">
-                <span class="text-xs"><a href="{{ request.url_root }}/block/{{ block_data.receive_block.hash }}">{{ block_data.receive_block.hash }}</a></span>
-                <p class="text-2xl font-bold text-center mb-6">{{ block_data.receive_block.amount }} Ӿ</p>
-                <span class="absolute bottom-2 left-2 bg-green-500 text-white text-xs px-2 py-1 rounded">{{ 'Confirmed' if block_data.receive_block.is_confirmed else 'Unconfirmed' }}</span>
-                <span class="absolute bottom-2 left-20 text-gray-500 text-xs px-2 py-1">{{ block_data.receive_block.time_ago }}</span>
-                <span class="absolute bottom-2 right-2 bg-green-500 text-white text-xs px-2 py-1 rounded">receive block</span>            
+        
+            <!-- Sender Address -->
+            <div class="text-center mb-2">            
+                <span class="bg-blue-500 text-white text-sm px-2 py-1 rounded"><a href="{{ request.url_root }}/account/{{ block_data.sender_account }}">{{ block_data.sender_account }}</a></span>   
+                <p class="text-2xl font-bold text-center">Sender</p>            
+            </div>
+            
+            <!-- Sender Circle -->
+            <div class="w-12 h-12 border-2 border-blue-500 rounded-full"></div>
+
+            <!-- Arrow -->
+            <div class="flex flex-col items-center">
+                <div class="bg-blue-500 h-6 w-1"></div>                 
+            </div>
+        
+            <!-- Send Block -->
+            <div class="border-2 border-blue-500 bg-blue-100 w-128 rounded p-2 text-blue-500 mb-20 relative">
+                <span class="text-xs"><a href="{{ request.url_root }}/block/{{ block_data.send_block.hash }}">{{ block_data.send_block.hash }}</a></span>            
+                
+                <p class="text-2xl font-bold text-center mb-6">{{ block_data.send_block.amount }} Ӿ</p>
+                <span class="absolute bottom-2 left-2 bg-blue-500 text-white text-xs px-2 py-1 rounded">{{ 'Confirmed' if block_data.send_block.is_confirmed else 'Unconfirmed' }}</span>
+                <span class="absolute bottom-2 left-20 text-gray-500 text-xs px-2 py-1">{{ block_data.send_block.time_ago }}</span>
+                <span class="absolute bottom-2 right-2 bg-blue-500 text-white text-xs px-2 py-1 rounded">send block</span>
             </div>
 
-            <!-- Receiver Circle green -->
-            <div class="flex flex-col items-center">               
-                <div class="bg-green-500 h-6 w-1"></div>
-                <div class="w-12 h-12 border-2 border-green-500 rounded-full mb-2"></div>                
-            </div>            
+            <!-- Duration between Send & Receive
+            <div class="flex flex-col items-center mb-2">  
+                <i class="fa-solid fa-ellipsis-vertical"></i>        
+                <div class="text-black leading-none"><i class="fa-regular fa-clock"> </i> {{ block_data.duration_formatted }}</div>
+                <i class="fa-solid fa-ellipsis-vertical"></i>             
+            </div>
+            -->
             
-        {% endif %}
-       
+            <!-- Receive Block -->
+            {% if block_data.receive_block.hash == '0' * 64 %}
+                <!-- No Receive Block -->
+                <div class="border-2 border-gray-400 bg-gray-200 w-128 rounded p-2 text-gray-500 relative">
+                    <span class="text-xs">{{ '0' * 64 }}</span>
+                    <p class="text-2xl font-bold text-center mb-6">Waiting for receiver</p>
+                    <span class="absolute bottom-2 left-2 bg-gray-400 text-white text-xs px-2 py-1 rounded">Unconfirmed</span>
+                    <span class="absolute bottom-2 right-2 bg-gray-400 text-white text-xs px-2 py-1 rounded">receive block</span>            
+                </div>
+
+                <!-- Receiver Circle gray -->
+                <div class="flex flex-col items-center">               
+                    <div class="bg-gray-500 h-6 w-1"></div>
+                    <div class="w-12 h-12 border-2 border-gray-500 rounded-full mb-2"></div>                
+                </div>
+
+            {% else %}
+                <!-- Receive Block -->
+                <div class="border-2 border-green-500 bg-green-100 w-128 rounded p-2 text-green-500 relative">
+                    <span class="text-xs"><a href="{{ request.url_root }}/block/{{ block_data.receive_block.hash }}">{{ block_data.receive_block.hash }}</a></span>
+                    <p class="text-2xl font-bold text-center mb-6">{{ block_data.receive_block.amount }} Ӿ</p>
+                    <span class="absolute bottom-2 left-2 bg-green-500 text-white text-xs px-2 py-1 rounded">{{ 'Confirmed' if block_data.receive_block.is_confirmed else 'Unconfirmed' }}</span>
+                    <span class="absolute bottom-2 left-20 text-gray-500 text-xs px-2 py-1">{{ block_data.receive_block.time_ago }}</span>
+                    <span class="absolute bottom-2 right-2 bg-green-500 text-white text-xs px-2 py-1 rounded">receive block</span>            
+                </div>
+
+                <!-- Receiver Circle green -->
+                <div class="flex flex-col items-center">               
+                    <div class="bg-green-500 h-6 w-1"></div>
+                    <div class="w-12 h-12 border-2 border-green-500 rounded-full mb-2"></div>                
+                </div>            
+                
+            {% endif %}
         
-        <!-- Receiver Address -->
-        <div class="text-center">
-            <p class="text-2xl font-bold text-center">Receiver</p>
-            <span class="bg-green-500 text-white text-sm px-2 py-1 rounded"><a href="{{ request.url_root }}/account/{{ block_data.receiver_account }}">{{ block_data.receiver_account }}</a></span> 
-        </div>
+            
+            <!-- Receiver Address -->
+            <div class="text-center">
+                <p class="text-2xl font-bold text-center">Receiver</p>
+                <span class="bg-green-500 text-white text-sm px-2 py-1 rounded"><a href="{{ request.url_root }}/account/{{ block_data.receiver_account }}">{{ block_data.receiver_account }}</a></span> 
+            </div>
+        {% endif %}
+
+
     </div>
 </body>
 
