--- a/nanobrowse/templates/block_viewer.html
+++ b/nanobrowse/templates/block_viewer.html
@@ -20,7 +20,7 @@
         
             <!-- Sender Address -->
             <div class="text-center mb-2">            
-                <span class="bg-blue-500 text-white text-sm px-2 py-1 rounded"><a href="{{ request.url_root }}/account/{{ block_data.sender_account }}">{{ block_data.sender_account }}</a></span>   
+                <span class="bg-blue-500 text-white text-sm px-2 py-1 rounded"><a href="{{ request.url_root }}account/{{ block_data.sender_account }}">{{ block_data.sender_account }}</a></span>   
                 <p class="text-2xl font-bold text-center">Sender</p>            
             </div>
             
@@ -34,7 +34,7 @@
         
             <!-- Send Block -->
             <div class="border-2 border-blue-500 bg-blue-100 w-128 rounded p-2 text-blue-500 mb-20 relative">
-                <span class="text-xs"><a href="{{ request.url_root }}/block/{{ block_data.send_block.hash }}">{{ block_data.send_block.hash }}</a></span>            
+                <span class="text-xs"><a href="{{ request.url_root }}block/{{ block_data.send_block.hash }}">{{ block_data.send_block.hash }}</a></span>            
                 
                 <p class="text-2xl font-bold text-center mb-6">{{ block_data.send_block.amount }} Ӿ</p>
                 <span class="absolute bottom-2 left-2 bg-blue-500 text-white text-xs px-2 py-1 rounded">{{ 'Confirmed' if block_data.send_block.is_confirmed else 'Unconfirmed' }}</span>
@@ -69,7 +69,7 @@
             {% else %}
                 <!-- Receive Block -->
                 <div class="border-2 border-green-500 bg-green-100 w-128 rounded p-2 text-green-500 relative">
-                    <span class="text-xs"><a href="{{ request.url_root }}/block/{{ block_data.receive_block.hash }}">{{ block_data.receive_block.hash }}</a></span>
+                    <span class="text-xs"><a href="{{ request.url_root }}block/{{ block_data.receive_block.hash }}">{{ block_data.receive_block.hash }}</a></span>
                     <p class="text-2xl font-bold text-center mb-6">{{ block_data.receive_block.amount }} Ӿ</p>
                     <span class="absolute bottom-2 left-2 bg-green-500 text-white text-xs px-2 py-1 rounded">{{ 'Confirmed' if block_data.receive_block.is_confirmed else 'Unconfirmed' }}</span>
                     <span class="absolute bottom-2 left-20 text-gray-500 text-xs px-2 py-1">{{ block_data.receive_block.time_ago }}</span>
@@ -88,7 +88,7 @@
             <!-- Receiver Address -->
             <div class="text-center">
                 <p class="text-2xl font-bold text-center">Receiver</p>
-                <span class="bg-green-500 text-white text-sm px-2 py-1 rounded"><a href="{{ request.url_root }}/account/{{ block_data.receiver_account }}">{{ block_data.receiver_account }}</a></span> 
+                <span class="bg-green-500 text-white text-sm px-2 py-1 rounded"><a href="{{ request.url_root }}account/{{ block_data.receiver_account }}">{{ block_data.receiver_account }}</a></span> 
             </div>
         {% endif %}
 
