--- a/nanobrowse/templates/block_viewer.html
+++ b/nanobrowse/templates/block_viewer.html
@@ -55,8 +55,7 @@
                 <!-- No Receive Block -->
                 <div class="border-2 border-gray-400 bg-gray-200 w-128 rounded p-2 text-gray-500 relative">
                     <span class="text-xs">{{ '0' * 64 }}</span>
-                    <p class="text-2xl font-bold text-center mb-6">Waiting for receiver</p>
-                    <span class="absolute bottom-2 left-2 bg-gray-400 text-white text-xs px-2 py-1 rounded">Unconfirmed</span>
+                    <p class="text-2xl font-bold text-center mb-6">Ready for recipient to receive</p>                    
                     <span class="absolute bottom-2 right-2 bg-gray-400 text-white text-xs px-2 py-1 rounded">receive block</span>            
                 </div>
 
