--- a/nanobrowse/templates/search.html
+++ b/nanobrowse/templates/search.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>nanoBrowse</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/darkmode.css') }}">
     <script>
         function handleFormSubmit(event) {
             event.preventDefault();  // Prevent form from submitting the traditional way
