wip - fix account_viewer for mobile

--- a/nanobrowse/templates/account_viewer.html
+++ b/nanobrowse/templates/account_viewer.html
@@ -13,7 +13,7 @@
 
     <div class="container mx-auto">
         <!-- <h1 class="text-2xl font-bold mb-8 text-center">{{account_data['account']}}</h1> -->
-        <div class="mb-8 flex flex-col items-center">
+        <div class="mb-8 flex flex-col items-center break-all">
             {% if account_data['show_weight'] %}
                 <span class="bg-pink-500 text-white text-sm px-2 py-1 rounded"><i class="fa-solid fa-wallet"></i> {{account_data['account']}}</span>
                 {% if account_data['is_pr'] %}                
